# ChangeLog for dev-perl/Test-Taint
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Taint/ChangeLog,v 1.23 2012/06/24 13:00:13 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Test-Taint-1.04.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Test-Taint-1.40.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Test-Taint-1.40.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +Test-Taint-1.40.0.ebuild:
  Change version scheme

  27 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  Test-Taint-1.04.ebuild:
  ppc64 stable wrt #352781

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> Test-Taint-1.04.ebuild:
  alpha stable

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> Test-Taint-1.04.ebuild:
  Marked ~ppc64 for bug #315793.

  08 May 2010; Raúl Porcel <armin76@gentoo.org> Test-Taint-1.04.ebuild:
  Add ~alpha wrt #315793

  06 Feb 2010; Torsten Veller <tove@gentoo.org> Test-Taint-1.04.ebuild:
  Fix LICENSE (#301969). Maintenance

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org> Test-Taint-1.04.ebuild:
  Transfer Prefix keywords

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Test-Taint-1.04.ebuild:
  Stable for HPPA too.

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> Test-Taint-1.04.ebuild:
  x86 stable

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Test-Taint-1.04.ebuild:
  Ebuild maintenance

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Test-Taint-1.04.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Test-Taint-1.04.ebuild:
  Adding perl dep; fixed DEPEND

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Taint-1.04.ebuild:
  ppc stable

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Test-Taint-1.04.ebuild:
  Mark 1.04 stable on ia64
