@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Test-Taint-1.04.tar.gz 12404 SHA256 ef7ee6bea0323a44f155298c17873ee2871c9aa3ca69b72e62f842057f0eed90 SHA512 7d1593032b3162167c6a2ce03925e66b0f8e13fc191641535ebe64a99bd0eaac55ffff04240f84459ba86f014d2d7fe4a84a6fc0d202667d0b88afe76f0c314d WHIRLPOOL 2f4741471ca2351d36d92d154a96834bc8018f84a0ef4f37835d0c9d4428b40e01da7a5183543e9826213c687f8f9197c0587cf63b2621b5032994f50f142427
+DIST Test-Taint-1.06.tar.gz 13346 SHA256 721b51ca91d248ea5ff4f99ca49c05a080e6f0fc9f7983e96121b7775ab93107 SHA512 58221b0145d9b908994c093168ca547a18cd56113f4923a4662bb9c113635378740363914d1fd43602f15c76a23cfe26d0682ed6ce22836d712692f439e782c2 WHIRLPOOL adcd33a4e05892ddd1fba4e8878266466ef8e33737284226c89974a91d0ab863582f5b10c701c68451468df13033e5405f59559b6932a62b2bbe065860b768c5
 EBUILD Test-Taint-1.40.0.ebuild 551 SHA256 2b4e86a0834377f76503347b07ff779d089059f8cd31a51557566e678a3b8225 SHA512 117995197a19c4c1811aae58fb90787d71714da84623c7ac3b94af6883f0ceb4db227d91ef3315bc742afd94bae5d833bca9137bd2567b5699ca7f8160e86982 WHIRLPOOL ea5d9258b5e5df01f7f19d2dea5875cd02cdffd295d657ff142351cdf091957910b7fc69d93e4013398dd43e8cfcd64791029456cb5af48cc03d00c81bbe1d1a
-MISC ChangeLog 2509 SHA256 d50e450497c7007c018e497593b589c1b7938046716701ed645377184c9fa904 SHA512 91418e5f7e58a242dd3cb9e41352703d9d703423f541d839c958b70c6de45434dfcf1dad1581edaad015c4997b16189b8d8b40a6a27c2365a613f7d1b0ebf58f WHIRLPOOL 480306b64a3ccc288ad7ccc578b6fe6cf132f8040cc2c3fc8e5ff61abb7fd614e363e16b8e99d14cff560086c34a75a0c9c3a367ab2ad117fcc2d8f1a0b3b404
+EBUILD Test-Taint-1.60.0.ebuild 559 SHA256 b19e5dba939c0f8680edc7c79f442a53b40a43d6dfcaf1b33ba8d09697d589a6 SHA512 fe7a91c6a4a97e49512111081be74e28916a7096fcf23b2cd9ce4d4ec30fc8f46df30551b13dac6639385693897cc7fe0743dd4a4567a90d68e0608a9c30dfa1 WHIRLPOOL 7b8266662a8cd768b00c674a69c88c4642a7d379b2555ec1401bf54a5619c49a672be204b88b4421280abdd481009287061e5a8b5ef85a7c2c3c2236e8e7eefc
+MISC ChangeLog 2634 SHA256 67b2ebc23ec2f8755409c311fdba02c62d8742e998a198421839a2657d297ea3 SHA512 dad4fb2c7cee9340f0a6e4a6b10290246bcf0075a623091c85000a9cf95c5eabd6911b6dbbef067a21cdb3aca4d3a7fd7f2043a2da332a50d51e4072e0686f4f WHIRLPOOL dfeac7ea63e65809f6e89e1b4656efa2d6c4c295dc4a32bb8e3cff0de6269f4dd141ba6a6d93e4b33fe0c837d6bda4529e317bb5e8d46ad9e7b6fd608f222ec6
 MISC metadata.xml 294 SHA256 98f311ec4570fc857c912e5e0ff6899b00cc6ebed14049beb0394ebd63a5f777 SHA512 ee681d93140cd7b0be0fbfa78a845d1e6fb06c51442494ec25e8a8d5412223281a6bf6922a9e57f5a4ad259692220a473510810273cb4c05df0a0b2533973159 WHIRLPOOL a1c186270952712744661fc0b7458de115a1fdb9c00dfc6daa474050735d1b9d7382374f7d8dd245c8d28ba845684a78f2a9c90c4447ae225513fb60a8e29fb2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCVYrYACgkQV3J2n04EauxjdwCeL4Npx0CO6QaujvyTGJFAlL6S
+nnMAnjTo0nwD3PZ14SGrnYHvScmyhdzv
+=kfgg
+-----END PGP SIGNATURE-----
