@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Test-Taint
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Taint/ChangeLog,v 1.23 2012/06/24 13:00:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Taint/ChangeLog,v 1.24 2012/11/03 18:30:13 tove Exp $
+
+*Test-Taint-1.60.0 (03 Nov 2012)
+
+  03 Nov 2012; Torsten Veller <tove@gentoo.org> +Test-Taint-1.60.0.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
